Vendor the stuff I actually used from better-defaults

--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -359,14 +359,53 @@ Flycheck is an on-the-fly syntax checker.
 :END:
 
 #+BEGIN_SRC emacs-lisp 
+  ;; Lifted from the better-defaults package, with various things changed
 
-  (use-package better-defaults
-    :ensure t)
+  (progn
+    (unless (eq window-system 'ns)
+      (menu-bar-mode -1)) 
+    (when (fboundp 'tool-bar-mode)
+      (tool-bar-mode -1))
+    (when (fboundp 'scroll-bar-mode)
+      (scroll-bar-mode -1))
+    (when (fboundp 'horizontal-scroll-bar-mode)
+      (horizontal-scroll-bar-mode -1))
 
+    (autoload 'zap-up-to-char "misc"
+      "Kill up to, but not including ARGth occurrence of CHAR." t)
+
+    (require 'uniquify)
+    (setq uniquify-buffer-name-style 'forward)
+
+    ;; https://www.emacswiki.org/emacs/SavePlace
+    (save-place-mode 1)
+
+    (global-set-key (kbd "M-/") 'hippie-expand)
+    (global-set-key (kbd "C-x C-b") 'ibuffer)
+    (global-set-key (kbd "M-z") 'zap-up-to-char)
+
+    (global-set-key (kbd "C-s") 'isearch-forward-regexp)
+    (global-set-key (kbd "C-r") 'isearch-backward-regexp)
+    (global-set-key (kbd "C-M-s") 'isearch-forward)
+    (global-set-key (kbd "C-M-r") 'isearch-backward)
+
+    (show-paren-mode 1)
+    (setq-default indent-tabs-mode nil)
+    (setq save-interprogram-paste-before-kill t
+          apropos-do-all t
+          mouse-yank-at-point t
+          require-final-newline t
+          visible-bell t
+          load-prefer-newer t
+          ediff-window-setup-function 'ediff-setup-windows-plain
+          custom-file (expand-file-name "~/.emacs.d/custom.el"))
+
+    (unless backup-directory-alist
+      (setq backup-directory-alist `(("." . ,(concat user-emacs-directory
+                                                     "backups"))))))
 #+END_SRC
 
 #+RESULTS:
-|   |
 
 ** Better search
 :PROPERTIES:
