--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -726,20 +726,6 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
       "c" 'xah-copy-file-path
       "s" 'save-buffer)
 
-    (defun lsp-find-definition-with-fallback ()
-      (interactive)
-      (let ((definition (lsp-find-definition)))
-        (when (or (string-prefix-p "Not found for:" definition))
-          (dumb-jump-go))))
-
-    ;; JavaScript
-    (general-define-key :keymaps '(typescript-mode-map javascript-mode-map)
-                        "gf" 'lsp-find-definition-with-fallback)
-
-    ;; Ruby
-    (general-define-key :keymaps '(ruby-mode-map)
-                        "gf" 'lsp-find-definition-with-fallback)
-
     ;; Use go-specific jumping for go-mode since it works wells
     (general-define-key :keymaps 'go-mode-map
                         "gf" 'godef-jump)
@@ -814,16 +800,7 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
 
     (general-define-key
      :states '(normal)
-     "f" 'avy-goto-word-or-subword-1)
-
-    (general-define-key
-     :states '(normal)
-     "gf" (lambda () 
-            (interactive)
-            (if current-prefix-arg
-                (dumb-jump-go-other-window)
-              (dumb-jump-go)))
-     "gb" 'dumb-jump-back))
+     "f" 'avy-goto-word-or-subword-1))
 #+END_SRC
 
 #+RESULTS:
@@ -976,8 +953,10 @@ Reduce the amount that the mouse scrolls.
 
 #+BEGIN_SRC emacs-lisp
   (use-package dumb-jump
-    :ensure t
-    :commands (dumb-jump-go dumb-jump-go-back dumb-jump-go-other-window)
+    :straight t
+    :commands (dumb-jump-xref-activate)
+    :init 
+    (add-hook 'xref-backend-functions #'dumb-jump-xref-activate)
     :config
     (setq dumb-jump-selector 'completing-read)
     (setq dumb-jump-force-searcher 'rg))
