--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -482,15 +482,15 @@ This sets up emacs to inherit commands from ~$PATH~. Without it, some commands t
 
 #+BEGIN_SRC emacs-lisp 
   (use-package exec-path-from-shell
-    :ensure t
-    :config
-    (setq exec-path-from-shell-arguments '("-l"))
-    (setq exec-path-from-shell-variables '("PATH"
-                                           "MANPATH"
-                                           "NIX_PATH"
-                                           "SSH_AGENT_PID"
-                                           "SSH_AUTH_SOCK"))
-    (exec-path-from-shell-initialize))
+   :ensure t
+   :config
+   (setq exec-path-from-shell-arguments '("-l"))
+   (setq exec-path-from-shell-variables '("PATH"
+                                          "MANPATH"
+                                          "NIX_PATH"
+                                          "SSH_AGENT_PID"
+                                          "SSH_AUTH_SOCK"))
+   (exec-path-from-shell-initialize))
 #+END_SRC
 
 #+RESULTS:
@@ -647,13 +647,13 @@ better-defaults enables ido-mode, but we're using selectrum.
     (evil-mode 1)
 
     (use-package evil-surround
-      :ensure t
+      :straight t
       :diminish evil-surround-mode
       :config
       (global-evil-surround-mode 1))
 
     (use-package evil-matchit
-      :ensure t
+      :straight t
       :config
       (global-evil-matchit-mode 1)))
 
@@ -699,7 +699,9 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
       "s" '(:which-key "stump"
                          :def (lambda () (interactive) (find-file "~/.stumpwmrc")))
       "o" '(:which-key "org-file"
-                       :def (lambda () (interactive) (find-file "~/org/projects.org"))))
+                       :def (lambda () (interactive) (find-file "~/org/projects.org")))
+      "g" '(:which-key "goldfinch"
+                       :def (lambda () (interactive) (find-file "~/org/goldfinch.org"))))
 
     (leader-def :infix "w"
       "" '(:ignore t :which-key "windows")
@@ -1288,19 +1290,45 @@ Always focus the cursor in help windows.
 
   (use-package shackle
     :ensure t
-    :init
-
+    :config
     (setq shackle-rules
           '((help-mode :align below
                        :select t
                        :size 0.4
                        :popup t)
+            (compilation-mode :align below
+                              :select t
+                              :size 0.3
+                              :popup t)
             (" *Agenda Commands*"
              :align below
              :size 0.4
              :popup t)
-            ("*Org Agenda*" :align below :popup t :size 0.4))) 
+            ("*Org Agenda*" :align below :popup t :size 0.4)))
     (shackle-mode))
+#+end_src
+*** Popper
+:PROPERTIES:
+:ID:       0014d049-33df-4aa7-936f-279492268961
+:END:
+Treat some windows like popups.
+
+#+begin_src emacs-lisp
+  (use-package popper
+    :ensure t
+    :general
+    (general-define-key
+     "C-`" 'popper-toggle-latest
+     "M-`" 'popper-cycle)
+    :init
+    (setq popper-reference-buffers
+          '("\\*Messages\\*"
+            "Output\\*$"
+            help-mode
+            compilation-mode))
+    (popper-mode +1)
+    :config
+    (setq popper-display-control nil))
 #+end_src
 
 ** Scrolling
@@ -1401,10 +1429,6 @@ Selectrum is basically how I want completing-read to work. Simple, composable, f
     (set-face-attribute 'selectrum-current-candidate nil
                         :foreground (plist-get base16-tomorrow-night-colors :base09)
                         :background (plist-get base16-tomorrow-night-colors :base01))
-    (set-face-attribute 'selectrum-primary-highlight nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0E))
-    (set-face-attribute 'selectrum-secondary-highlight nil
-                        :foreground (plist-get base16-tomorrow-night-colors :base0D))
 
     (selectrum-mode +1)
 
@@ -1487,6 +1511,10 @@ Selectrum is basically how I want completing-read to work. Simple, composable, f
   (use-package selectrum-prescient
     :straight (selectrum-prescient :type git :host github :repo "raxod502/prescient.el")
     :config
+    (set-face-attribute 'selectrum-prescient-primary-highlight nil
+                        :foreground (plist-get base16-tomorrow-night-colors :base0E))
+    (set-face-attribute 'selectrum-prescient-secondary-highlight nil
+                        :foreground (plist-get base16-tomorrow-night-colors :base0D))
     (selectrum-prescient-mode +1)
     (prescient-persist-mode +1))
 
@@ -1497,32 +1525,25 @@ Selectrum is basically how I want completing-read to work. Simple, composable, f
           ("C-j" . embark-act))
 
     :config
-    (defun current-candidate+category ()
-      (when selectrum-active-p
-        (cons (selectrum--get-meta 'category)
-              (selectrum-get-current-candidate))))
+    (defun refresh-selectrum ()
+      (setq selectrum--previous-input-string nil))
 
-    (add-hook 'embark-target-finders #'current-candidate+category)
-
-    (defun current-candidates+category ()
-      (when selectrum-active-p
-        (cons (selectrum--get-meta 'category)
-              (selectrum-get-current-candidates
-               ;; Pass relative file names for dired.
-               minibuffer-completing-file-name))))
-
-    (add-hook 'embark-candidate-collectors #'current-candidates+category)
-
-    ;; No unnecessary computation delay after injection.
-    (add-hook 'embark-setup-hook 'selectrum-set-selected-candidate)
+    (add-hook 'embark-pre-action-hook #'refresh-selectrum)
 
     ;; Pop up which-key when running embark-act
     (setq embark-action-indicator
-          (lambda (map)
+          (lambda (map &optional _target)
             (which-key--show-keymap "Embark" map nil nil 'no-paging)
             #'which-key--hide-popup-ignore-command)
           embark-become-indicator embark-action-indicator)
     (setq embark-prompter 'embark-keymap-prompter))
+
+  (use-package embark-consult
+    :straight (embark-consult :type git :host github :repo "oantolin/embark")
+    :after (embark consult)
+    :demand t
+    :hook
+    (embark-collect-mode . consult-preview-at-point-mode))
 
   (use-package marginalia
     :straight (marginalia :type git :host github :branch "main" :repo "minad/marginalia")
@@ -1594,7 +1615,7 @@ Dim inactive buffers.
     (dimmer-configure-magit)
     (dimmer-configure-org)
     (add-to-list 'dimmer-buffer-exclusion-regexps "\\*Help\\*")
-    (add-to-list 'dimmer-buffer-exclusion-regexps "\\*compilation-mode\\*")
+    (add-to-list 'dimmer-buffer-exclusion-regexps "\\*compilation\\*")
     (add-to-list 'dimmer-buffer-exclusion-regexps "\\*mu4e-headers\\*")
     (add-to-list 'dimmer-buffer-exclusion-regexps "\\*mu4e-view\\*"))
 #+end_src
@@ -2343,7 +2364,7 @@ I typically use 2 spaces to indent.
                  "\n→"
                  `(:foreground ,(plist-get base16-tomorrow-night-colors :base0A)))
 
-    (setq eshell-prompt-regexp "\n→ ")
+    (setq eshell-prompt-regexp "→ ")
     (setq eshell-skip-prompt-function #'eshell-skip-prompt)
     (setq esh-sep " ")
     (setq esh-funcs (list esh-header esh-user esh-dir esh-git esh-footer))
@@ -2557,7 +2578,7 @@ Let's use web-mode, which supports font locking for templating.
 :END:
 #+begin_src emacs-lisp
   (use-package lsp-mode
-    :ensure t
+    :straight t
     :commands (lsp lsp-deferred)
     :hook ((go-mode . lsp-deferred)
            (typescript-mode . lsp-deferred)
@@ -2577,15 +2598,15 @@ Let's use web-mode, which supports font locking for templating.
     (add-hook 'before-save-hook #'lsp-organize-imports t t))
 
   (use-package lsp-ui
-    :ensure t
+    :straight t
     :commands lsp-ui-mode)
 
   (use-package company-lsp
-    :ensure t
+    :straight t
     :commands company-lsp)
 
   (use-package yasnippet
-    :ensure t
+    :straight t
     :commands yas-minor-mode
     :hook (go-mode . yas-minor-mode))
 
@@ -2671,9 +2692,6 @@ Let's use web-mode, which supports font locking for templating.
     :straight (solidity-flycheck :type git :host github :repo "ethereum/emacs-solidity")
     :defer t
     :init
-    (setq solidity-flycheck-solium-checker-active nil)
-    (setq solidity-flycheck-solc-checker-active t)
-    (setq solidity-flycheck-solhint-checker-active t)
     (setq solidity-flycheck-chaining-error-level t)
     (setq solidity-flycheck-use-project t)
 
@@ -2690,6 +2708,11 @@ Let's use web-mode, which supports font locking for templating.
               (lambda ()
                 (set (make-local-variable 'company-backends)
                      '((company-dabbrev-code company-solidity company-capf))))))
+
+  (use-package prettier
+    :straight t
+    :config
+    (global-prettier-mode))
 #+end_src
 
 #+RESULTS:
@@ -2818,7 +2841,8 @@ I can type timestamped notes for a given tree with ~C-c C-z~. By default, they a
     (eval-after-load 'org-indent '(diminish 'org-indent-mode))
     (setq org-hide-emphasis-markers t)
 
-    (setq org-format-latex-options (plist-put org-format-latex-options :scale 1.5))
+    (setq org-format-latex-options (plist-put org-format-latex-options :scale 2.5))
+    (setq org-babel-python-command (concat (file-name-as-directory org-directory) "venv/bin/python"))
 
     (progn
       (set-face-attribute 'org-level-1 nil :height 1.5 :weight 'bold)
@@ -2848,6 +2872,9 @@ I can type timestamped notes for a given tree with ~C-c C-z~. By default, they a
     :straight (org-z :type git :host github :repo "landakram/org-z")
     :config
     (org-z-mode 1))
+
+  (use-package org-ql
+    :straight t)
 
   (use-package org-z-selectrum
     :straight (org-z-selectrum :type git :host github :repo "landakram/org-z"))
@@ -3104,7 +3131,7 @@ I often link to JIRA issues in my tasks. This function lets me add link JIRA iss
 #+BEGIN_SRC emacs-lisp 
 
   (use-package org
-    :ensure org-plus-contrib
+    :straight t
     :general
     (:states '(normal)
      :keymaps 'org-mode-map
